@@ -646,7 +646,7 @@ if(in_array(ini_get('mbstring.func_overload'), array(2,3,6,7))){
 	define('REGEXP_EXCLUDE',1);
 
 // PREG
-	define('ZBX_PREG_PRINT', '^\x00-\x1F');
+	define('ZBX_PREG_PRINT', '^\x{00}-\x{1F}');
 
 	define('ZBX_PREG_SPACES', '(\s+){0,1}');
 	define('ZBX_PREG_MACRO_NAME', '([A-Z0-9\._]+)');
